# portfolio

./: .bandit  .coverage  .coveragerc  .devcontainer.json  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .slugignore  .sourcery.yaml  .watchmanconfig  Dockerfile  LICENSE  Pipfile  README.md  conftest.py  docker-compose.full.yml  docker-compose.prod copy.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn.py  heroku.yml  init-letsencrypt.sh  learning_sources.md  learnings.md  manage.py  outdated.txt  package-lock.json  package.json  package_info.json  portfolio_Actions.md  process_steps.md  prod.env  project_directory_setup.md  pyproject.toml  pytest.ini  requirements.txt  run-dev.sh  run-prod.sh  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  regression.md
.github/workflows/: codeql-analysis.yml  django.yml  pre-commit-autoupdate.yml  pytest_coverage.yml  stale.yml  test.yml
_2b/: settings.py  urls.py  wsgi.py
aa-front-end/: .gitignore  README.md  package-lock.json  package.json
aa-front-end/playground/: _purpose.md  arrowFunctions.js  classes.js  events.js  indecision.jsx  object_destructuring.js  spread_operators.js
aa-front-end/public/: index.html
aa-front-end/src/: App.js  CounterComponent.jsx  custom.css  index.js  routes.js  temp.css  temp.txt  update_upvotes_request.rest
aa_project/: pytest.py  settings.py  urls.py  wsgi.py
aa_project/settings/: base.py  dev.py  prod.py
aa_project/tests/: test_base.py  test_prod.py  test_settings.py
ab_back_end/: context_processors.py  pytest.py  settings.py  test_settings.py  urls.py  views.py  wsgi.py
ab_back_end/templates/: 404.html  about_blog.html  about_me.html  about_project.html  album.html  album_blog_api.html  album_blog_api_project.html  album_blog_django.html  album_blog_project.html  album_blog_react.html  album_blog_react_project.html  album_count_project.html  album_countdown.html  album_countdown_letters.html  album_countdown_numbers.html  album_countdown_project.html  album_counting.html  album_data_science.html  album_project9.html  album_roulette.html  album_scraping.html  album_scraping_project.html  album_text_analysis.html  album_web_scraping.html  album_wordcount_project.html  base.html  contact.html  cv.html  footer.html  google_analytics.html  header.html  header_azure_notebooks.html  header_contact.html  header_github.html  header_linkedin.html  home.html  jumbotron.html  (+3 more)
analytics/: brew_formula_check.rest  get_results.py  objectives.md  serializers.py  urls.py  views.py
api/: README.md  serializers.py  urls.py  views.py
apps/: conftest.py  helpers.py
articles/: serializers.py  urls.py  views.py
blog/: README.md  admin.py  api_requests.rest  feeds.py  forms.py  models.py  named-tuples.py  permissions.py  renderers.py  response_authorised.http  response_not_authorised.http  serializers.py  sitemap.py  tempCodeRunnerFile.py  test.py  test_contents.http  tests.py  tests_api.py  urls.py  views.py  views_api.py
books/: models.py  urls.py  views.py
commands/: README.md  list_django_settings.sh
conf/: app.ini  nginx-app.conf
contacts/: README.md  admin.py  forms.py  models.py  urls.py  views.py
count/: README.md  apps.py  urls.py  views.py
countdown/: README.md  apps.py  forms.py  game_logic.py  is_abecedarian.py  parsed_letters.py  plan.MD  urls.py  views.py  word_validation.py  words.txt
countdown_letters/: README.md  admin.py  apps.py  forms.py  is_abecedarian.py  logic.py  models.py  oxford_api.py  plan.md  urls.py  utils.py  validations.py  views.py  words.txt
countdown_numbers/: README.md  admin.py  apps.py  forms.py  logic.py  models.py  urls.py  utils.py  validations.py  views.py
cv/: urls.py  views.py
data/: README.md
docker/: README.md
docs/: README.md  docker_procedure_dev.md  learnings.md  lessons_with_react.md  research_points.md
htmlcov/: ab_back_end___init___py.html  ab_back_end_settings_py.html  ab_back_end_urls_py.html  ab_back_end_views_py.html  ab_back_end_wsgi_py.html  api___init___py.html  api_admin_py.html  api_apps_py.html  api_urls_py.html  blog_admin_py.html  blog_apps_py.html  blog_models_py.html  blog_serializers_py.html  blog_sitemap_py.html  blog_templatetags___init___py.html  blog_templatetags_blog_tags_py.html  blog_tests___init___py.html  blog_tests_test_views_py.html  blog_urls_py.html  blog_views_api_py.html  blog_views_py.html  contacts___init___py.html  contacts_admin_py.html  contacts_apps_py.html  contacts_forms_py.html  contacts_migrations_0001_initial_py.html  contacts_migrations_0002_contact_submit_date_py.html  contacts_migrations___init___py.html  contacts_models_py.html  contacts_tests_py.html  contacts_urls_py.html  contacts_views_py.html  count___init___py.html  count_apps_py.html  count_urls_py.html  count_views_py.html  countdown___init___py.html  countdown_apps_py.html  countdown_forms_py.html  countdown_game_logic_py.html  (+24 more)
media/: README.md
nginx/: conf.d
notebooks/: README.md  django_debugger.ipynb  django_debugging.ipynb  oxford_api_debugger.ipynb  pytest_debugging.ipynb
pages/: urls.py  views.py
requests/: READme.md  requests.http
roulette/: README.md  apps.py  holiday_roulette.py  logging.py  logic.py  urls.py  views.py
scraping/: README.md  churchill.py  churchill_speech.py  gettysburg.py  gettysburg_speech.py  jokes.py  referendum.py  urls.py  views.py  word_of_the_day.py
scripts/: init-letsencrypt.sh
scss/: theme-3.scss
sent_emails/: README.md
snippets/: README.md  path.py  secrets.py  send_email.py
sql/: README.md  postgres_public_blog_post.sql
static/: README.md  about_project.js  main.css
staticfiles/: README.md  about_project.js  main.css  show_hide_element.ce4f27a42d00.js  staticfiles.json  use_lorem_ipsum.js
templates/: 404.html  README.md
text_analysis/: README.md  apps.py  urls.py  utils.py  views.py
todos/: admin.py  models.py  urls.py  views.py
users/: README.md  admin.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
wordcount/: urls.py  views.py
(+788 files in other folders)
