# -- POETRY CONFIG ----------------------------------------------------------------------

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "==3.14.3"
django = "==6.0.3"
djangorestframework = "==3.17.1"
django-crispy-forms = "==2.6"
django-recaptcha = "==4.1.0"
django-widget-tweaks = "==1.5.1"
django-shapeshifter = "==18.9.23"
django-guardian = "==3.3.1"
django-axes = "==8.3.1"
django-storages = "==1.14.6"
django-ses = "==4.7.2"
django-filter = "==25.2"
django-tinymce = "==5.0.0"
django-bootstrap4 = "==26.1"
django-two-factor-auth = "==1.18.1"
gunicorn = "==25.3.0"
whitenoise = "==6.12.0"
requests = "==2.33.1"
beautifulsoup4 = "==4.14.3"
markdown = "==3.10.2"
boto3 = "==1.42.83"
pygments = "==2.20.0"
pillow = "==12.2.0"
phonenumbers = "==9.0.27"
django-encrypted-model-fields = "==0.6.5"
rich = "==14.3.3"
crispy-bootstrap4 = "==2026.2"
psycopg = "==3.3.3"
dj-database-url = "==3.1.2"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "==6.3.0"
django-extensions = "==4.1"
pytest = "^9.0.2"
coverage = "^7.13.5"
pytest-django = "^4.12.0"
pytest-cov = "^7.1.0"
pytest-factoryboy = "^2.8.1"
mixer = "==7.2.2"
hypothesis = "^6.151.11"
bandit = "^1.7.6"
wily = "^1.25.0"
bpython = "^0.26"
ipdb = "^0.13.13"
pytest-randomly = "^4.0.1"
pytest-vcr = "^1.0.2"
pytest-mock = "^3.15.1"
pytest-xdist = "^3.8.0"
ruff = "^0.15.9"
ty = "^0.0.29"
debugpy = "^1.8.20"


[build-system]
requires = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"


# -- RUFF CONFIG ------------------------------------------------------------------------

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

extend-include = ["*.ipynb"]

# Same as Black.
line-length = 99
indent-width = 4

# Assume Python 3.14
target-version = "py314"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"aa_project.settings.prod.py" = ["F403", "F405"]
"aa_project.settings.dev.py" = ["F403", "F405"]
"aa_project.settings.pytest.pytest.py" = ["F403"]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "django",
  "first-party",
  "third-party",
  "local-folder",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


# -- ISORT CONFIG -----------------------------------------------------------------------

[tool.isort]
atomic = true
line_length = 99
profile = "black"
include_trailing_comma = true
force_single_line = false
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
skip_glob = "*/.venv/*, */node_modules/*, */.git/*, */migrations/*"

sections = [
  "FUTURE",
  "STDLIB",
  "DJANGO",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER",
]

known_django = "django"
known_third_party = [
  "PIL",
  "bs4",
  "captcha",
  "dj_database_url",
  "factory",
  "hypothesis",
  "mixer",
  "pytest",
  "requests",
  "rest_framework",
  "shapeshifter",
  "tinymce",
]

# -- PYTEST CONFIG ----------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "6.0"
django_find_project = true
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

addopts = [
  "--ds=aa_project.settings.pytest.pytest",
  "--reuse-db",
  "--nomigrations",
  "--fail-on-template-vars",
  "--doctest-modules",
  "--showlocals",
  "--strict-markers",
  "--ignore=.venv",
  "--cov=.",
  "--cov-report=html",
  "--randomly-dont-reorganize",
  "--numprocesses=auto",

  # Uses iPDB for `--trace` debugging
  "--pdbcls=IPython.terminal.debugger:TerminalPdb",
]

norecursedirs = [
  ".* build",
  "dist",
  "*.egg",
  "node_modules",
  "media",
  ".venv",
  "scss",
  "docs",
  ".git",
  "static",
  "staticfiles",
  "docker",
  "htmlcov",
]

testpaths = [
  "aa_project/tests",
  "apps/api/tests",
  "apps/blog/tests",
  "apps/contacts/tests",
  "apps/countdown_letters/tests",
  "apps/countdown_numbers/tests",
  "apps/cv/tests",
  "apps/pages/tests",
  "apps/roulette/tests",
  "apps/scraping/tests",
  "apps/text_analysis/tests",
  "apps/users/tests",
]

# filterwarnings = ["ignore::django.utils.deprecation.RemovedInDjango50Warning"]

# Command Line Options
console_output_style = "progress"
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Log Options
log_level = "INFO"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s %(levelname)s %(message)s"

# Log File Options
log_file = "logs/pytest/pytest_logs.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s %(levelname)s %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

# -- COVERAGE CONFIG --------------------------------------------------------------------

[tool.coverage]
[tool.coverage.run]
branch = true
parallel = true
source = ["."]
omit = [
  ".hypothesis/*",
  ".pytest_cache/*",
  ".venv/*",
  "*__init__.py",
  "*__pycache__",
  "*/aa_project/settings/dev.py",
  "*/aa_project/settings/pytest/pytest.py",
  "*/distutils/*",
  "*/node_modules/*",
  "*/site-packages/*",
  "*/static/*",
  "*/staticfiles/*",
  "*/tests/test*.py",
  "*/users/signals.py",
  "*admin.py*",
  "*apps.py",
  "*asgi.py",
  "*conftest.py",
  "*feeds.py",
  "*migrations/*",
  "*sitemap.py",
  "*wsgi.py",
  "manage.py",
]

[tool.coverage.report]
# fail_under = 95
skip_covered = false
show_missing = true
precision = 2
exclude_lines = [
  "def __repr__",
  "def __str__",
  "if __name__ == .__main__.:",
  "if 0:",
  "if DEBUG:",
  "if not DEBUG:",
  "if self.debug:",
  "if settings.DEBUG:",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
]
omit = ["venv/*", "tests/*", "setup.py", "*/__main__.py"]

# -- BANDIT CONFIG --------------------------------------------------------------------

[tool.bandit]
targets = ["/code/"]
exclude = [
  ".venv/*",
  "*apps.py",
  "*/migrations/*",
  "test_*.py",
  "*/node_modules/*",
  "./cacheback/*",
  "*/static/*",
  "*/staticfiles/*",
  "*/tests/test*.py",
  ".pytest_cache/*",
  ".hypothesis/*",
  "*wsgi.py",
  "*asgi.py",
  "manage.py",
  "*__init__.py",
  "*__pycache__",
  "*/site-packages/*",
  "*/distutils/*",
  "*/.git/*",
  ".github/*",
  "*/scss/*",
  "*/htmlcov/*",
  "*/logs/*",
  "*/media/*",
]
