# -- UV CONFIG --------------------------------------------------------------------------

[project]
name = "Portfolio"
version = "0.0.0"
requires-python = "==3.14.3"

dependencies = [
  "django==6.0.3",
  "djangorestframework==3.17.1",
  "django-crispy-forms==2.6",
  "django-recaptcha==4.1.0",
  "django-widget-tweaks==1.5.1",
  "django-shapeshifter==18.9.23",
  "django-guardian==3.3.1",
  "django-axes==8.3.1",
  "django-storages==1.14.6",
  "django-ses==4.7.2",
  "django-filter==25.2",
  "django-tinymce==5.0.0",
  "django-bootstrap4==26.1",
  "django-two-factor-auth==1.18.1",
  "gunicorn==25.3.0",
  "whitenoise==6.12.0",
  "requests==2.33.1",
  "beautifulsoup4==4.14.3",
  "markdown==3.10.2",
  "boto3==1.42.83",
  "pygments==2.20.0",
  "pillow==12.2.0",
  "phonenumbers==9.0.27",
  "django-encrypted-model-fields==0.6.5",
  "rich==14.3.3",
  "crispy-bootstrap4==2026.2",
  "psycopg==3.3.3",
  "dj-database-url==3.1.2",
]

[dependency-groups]
dev = [
  "django-debug-toolbar==6.3.0",
  "django-extensions==4.1",
  "pytest>=9.0.2,<10.0.0",
  "coverage>=7.13.5,<8.0.0",
  "pytest-django>=4.12.0,<5.0.0",
  "pytest-cov>=7.1.0,<8.0.0",
  "pytest-factoryboy>=2.8.1,<3.0.0",
  "mixer==7.2.2",
  "hypothesis>=6.151.11,<7.0.0",
  "bandit>=1.7.6,<2.0.0",
  "wily>=1.25.0,<2.0.0",
  "bpython>=0.26,<0.27",
  "ipdb>=0.13.13,<0.14.0",
  "pytest-randomly>=4.0.1,<5.0.0",
  "pytest-vcr>=1.0.2,<2.0.0",
  "pytest-mock>=3.15.1,<4.0.0",
  "pytest-xdist>=3.8.0,<4.0.0",
  "ruff>=0.15.9,<0.16.0",
  "ty>=0.0.29,<0.1.0",
  "debugpy>=1.8.20,<2.0.0",
  "django-watchfiles>=1.4.0",
]

[tool.uv]
package = false


# -- TY CONFIG --------------------------------------------------------------------------

[tool.ty.environment]
python = "/Users/wayne-lambert/dev/portfolio/src/.venv/bin/python"
root = ["./"]
python-version = "3.14"
extra-paths = []

# [tool.ty.overrides.analysis]
# allowed-unresolved-imports = []

[tool.ty.src]
respect-ignore-files = false


# -- RUFF CONFIG ------------------------------------------------------------------------

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "**/migrations/*",
]

extend-include = ["*.ipynb"]

# Same as Black.
line-length = 99
indent-width = 4

# Assume Python 3.14
target-version = "py314"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
extend-select = ["I"]
ignore = ["I001"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"aa_project.settings.prod.py" = ["F403", "F405"]
"aa_project.settings.dev.py" = ["F403", "F405"]
"aa_project.settings.pytest.pytest.py" = ["F403"]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "django",
  "first-party",
  "third-party",
  "local-folder",
]

from-first = false
lines-after-imports = 2
force-sort-within-sections = true
combine-as-imports = true
order-by-type = false

known-third-party = [
  "bs4",
  "captcha",
  "PIL",
  "crispy_forms",
  "dj_database_url",
  "factory",
  "hypothesis",
  "psycopg",
  "mixer",
  "phonenumber_field",
  "pytest",
  "rest_framework",
  "requests",
  "rich",
  "sequences",
  "shapeshifter",
  "two_factor",
  "tinymce",
]

known-local-folder = [
  "api",
  "blog",
  "contacts",
  "countdown_letters",
  "countdown_numbers",
  "cv",
  "pages",
  "roulette",
  "scraping",
  "text_analysis",
  "users",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


# # -- ISORT CONFIG -----------------------------------------------------------------------

# [tool.isort]
# atomic = true
# line_length = 99
# profile = "black"
# include_trailing_comma = true
# force_single_line = false
# lines_after_imports = 2
# lines_between_types = 1
# use_parentheses = true
# skip_glob = "*/.venv/*, */node_modules/*, */.git/*, */migrations/*"

# sections = [
#   "FUTURE",
#   "STDLIB",
#   "DJANGO",
#   "THIRDPARTY",
#   "FIRSTPARTY",
#   "LOCALFOLDER",
# ]

# known_django = "django"
# known_third_party = [
#   "PIL",
#   "bs4",
#   "captcha",
#   "dj_database_url",
#   "factory",
#   "hypothesis",
#   "mixer",
#   "pytest",
#   "requests",
#   "rest_framework",
#   "shapeshifter",
#   "tinymce",
# ]

# -- PYTEST CONFIG ----------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "6.0"
django_find_project = true
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

addopts = [
  "--ds=aa_project.settings.pytest.pytest",
  "--reuse-db",
  "--nomigrations",
  "--fail-on-template-vars",
  "--doctest-modules",
  "--showlocals",
  "--strict-markers",
  "--ignore=.venv",
  "--cov=.",
  "--cov-report=html",
  "--randomly-dont-reorganize",
  "--numprocesses=auto",

  # Uses iPDB for `--trace` debugging
  "--pdbcls=IPython.terminal.debugger:TerminalPdb",
]

norecursedirs = [
  ".* build",
  "dist",
  "*.egg",
  "node_modules",
  "media",
  ".venv",
  "scss",
  "docs",
  ".git",
  "static",
  "staticfiles",
  "docker",
  "htmlcov",
]

testpaths = [
  "aa_project/tests",
  "apps/api/tests",
  "apps/blog/tests",
  "apps/contacts/tests",
  "apps/countdown_letters/tests",
  "apps/countdown_numbers/tests",
  "apps/cv/tests",
  "apps/pages/tests",
  "apps/roulette/tests",
  "apps/scraping/tests",
  "apps/text_analysis/tests",
  "apps/users/tests",
]

# filterwarnings = ["ignore::django.utils.deprecation.RemovedInDjango50Warning"]

# Command Line Options
console_output_style = "progress"
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Log Options
log_level = "INFO"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s %(levelname)s %(message)s"

# Log File Options
log_file = "logs/pytest/pytest_logs.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s %(levelname)s %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

# -- COVERAGE CONFIG --------------------------------------------------------------------

[tool.coverage]
[tool.coverage.run]
branch = true
parallel = true
source = ["."]
omit = [
  ".hypothesis/*",
  ".pytest_cache/*",
  ".venv/*",
  "*__init__.py",
  "*__pycache__",
  "*/aa_project/settings/dev.py",
  "*/aa_project/settings/pytest/pytest.py",
  "*/distutils/*",
  "*/node_modules/*",
  "*/site-packages/*",
  "*/static/*",
  "*/staticfiles/*",
  "*/tests/test*.py",
  "*/users/signals.py",
  "*admin.py*",
  "*apps.py",
  "*asgi.py",
  "*conftest.py",
  "*feeds.py",
  "*migrations/*",
  "*sitemap.py",
  "*wsgi.py",
  "manage.py",
]

[tool.coverage.report]
# fail_under = 95
skip_covered = false
show_missing = true
precision = 2
exclude_lines = [
  "def __repr__",
  "def __str__",
  "if __name__ == .__main__.:",
  "if 0:",
  "if DEBUG:",
  "if not DEBUG:",
  "if self.debug:",
  "if settings.DEBUG:",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
]
omit = ["venv/*", "tests/*", "setup.py", "*/__main__.py"]

# -- BANDIT CONFIG --------------------------------------------------------------------

[tool.bandit]
targets = ["/code/"]
exclude = [
  ".venv/*",
  "*apps.py",
  "*/migrations/*",
  "test_*.py",
  "*/node_modules/*",
  "./cacheback/*",
  "*/static/*",
  "*/staticfiles/*",
  "*/tests/test*.py",
  ".pytest_cache/*",
  ".hypothesis/*",
  "*wsgi.py",
  "*asgi.py",
  "manage.py",
  "*__init__.py",
  "*__pycache__",
  "*/site-packages/*",
  "*/distutils/*",
  "*/.git/*",
  ".github/*",
  "*/scss/*",
  "*/htmlcov/*",
  "*/logs/*",
  "*/media/*",
]
